--- a/index.html
+++ b/index.html
@@ -1,118 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rajeev shop</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Rajeev Singh</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
+      background-color: #f4f4f4;
+      color: #333;
     }
     header {
-      background-color: #0d6efd;
+      background-color: #0077cc;
       color: white;
-      padding: 20px;
+      padding: 20px 0;
       text-align: center;
     }
-    nav {
-      background-color: #f8f9fa;
-      padding: 10px;
-      text-align: center;
+    section {
+      padding: 40px 20px;
+      max-width: 800px;
+      margin: auto;
+      background-color: white;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      color: #0d6efd;
-      font-weight: bold;
-    }
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-      padding: 20px;
-    }
-    .product {
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      padding: 15px;
-      text-align: center;
-    }
-    .product img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 5px;
-    }
-    .product h3 {
-      margin: 10px 0;
-    }
-    .product p {
-      font-size: 14px;
-      color: #666;
-    }
-    .product button {
-      background-color: #0d6efd;
-      color: white;
-      padding: 10px 15px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
+    h1, h2 {
+      margin: 0;
     }
     footer {
-      background-color: #f1f1f1;
       text-align: center;
-      padding: 15px;
-      margin-top: 30px;
+      padding: 20px;
+      background-color: #222;
+      color: white;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>My Shopping Store</h1>
-    <p>Best products at the best prices!</p>
+    <h1>Rajeev Singh</h1>
+    <p>Welcome to my personal website</p>
   </header>
 
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">Products</a>
-    <a href="#">Cart</a>
-    <a href="#">Contact</a>
-  </nav>
+  <section>
+    <h2>About Me</h2>
+    <p>Hello! I'm Rajeev Singh. I'm passionate about technology, web development, and DevOps. This is my personal space on the web where I share projects, ideas, and contact information.</p>
+    
+    <h2>Projects</h2>
+    <ul>
+      <li>Personal Portfolio Website</li>
+      <li>DevOps Automation with Ansible</li>
+      <li>Jenkins CI/CD Pipeline Example</li>
+    </ul>
 
-  <section class="products">
-    <div class="product">
-      <img src="https://via.placeholder.com/200" alt="Product 1">
-      <h3>Product 1</h3>
-      <p>$19.99</p>
-      <button>Add to Cart</button>
-    </div>
-
-    <div class="product">
-      <img src="https://via.placeholder.com/200" alt="Product 2">
-      <h3>Product 2</h3>
-      <p>$29.99</p>
-      <button>Add to Cart</button>
-    </div>
-
-    <div class="product">
-      <img src="https://via.placeholder.com/200" alt="Product 3">
-      <h3>Product 3</h3>
-      <p>$24.99</p>
-      <button>Add to Cart</button>
-    </div>
-
-    <div class="product">
-      <img src="https://via.placeholder.com/200" alt="Product 4">
-      <h3>Product 4</h3>
-      <p>$39.99</p>
-      <button>Add to Cart</button>
-    </div>
+    <h2>Contact</h2>
+    <p>Email: rajeev@example.com</p>
+    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
   </section>
 
   <footer>
-    <p>&copy; 2025 My Shopping Store. All rights reserved.</p>
+    &copy; 2025 Rajeev Singh. All rights reserved.
   </footer>
 
 </body>
