--- a/index.html
+++ b/index.html
@@ -1,1 +1,106 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Rajeev Singh's Blog</title>
+</head>
+<body>
 
+  <!-- Header -->
+  <header>
+    <h1>Rajeev Singh's Blog</h1>
+    <nav>
+      <a href="#">Home</a> |
+      <a href="#">About</a> |
+      <a href="#">Blog</a> |
+      <a href="#">Projects</a> |
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section>
+    <h2>Welcome to My World of Code, Cloud & Creativity</h2>
+    <p>This is where I share my thoughts, tutorials, and experience on DevOps, Web Development, and Tech Trends.</p>
+  </section>
+
+  <!-- Main Content and Sidebar -->
+  <div style="display: flex; gap: 30px; margin-top: 30px;">
+
+    <!-- Blog Posts -->
+    <main style="flex: 3;">
+      <!-- Post 1 -->
+      <article>
+        <h2>🔧 How I Built a CI/CD Pipeline with Jenkins & Docker</h2>
+        <p><strong>Date:</strong> June 10, 2025</p>
+        <p>In this tutorial, I show you step-by-step how I automated my deployment process using Jenkins, Docker, and GitHub Actions...</p>
+      </article>
+
+      <!-- Post 2 -->
+      <article>
+        <h2>🌐 Deploying Scalable Web Apps on AWS with Terraform</h2>
+        <p><strong>Date:</strong> May 29, 2025</p>
+        <p>If you're into DevOps and want to manage your AWS infrastructure as code, Terraform is your best friend. Here's how I deployed a real-world project...</p>
+      </article>
+
+      <!-- Post 3 -->
+      <article>
+        <h2>📈 SEO Tips for Developers: Get Your Blog Discovered</h2>
+        <p><strong>Date:</strong> May 14, 2025</p>
+        <p>Most developers ignore SEO. But small tweaks like proper headings, meta tags, and performance can skyrocket your traffic. Here's my guide...</p>
+      </article>
+
+      <!-- More Posts -->
+      <article>
+        <h2>🚀 Speed Up Your Website with Lazy Loading and Caching</h2>
+        <p>Loading speed matters. I implemented caching and lazy loading to cut my load time from 6s to 1.2s. Here's how...</p>
+      </article>
+
+      <article>
+        <h2>🔥 Top 10 VS Code Extensions I Use in 2025</h2>
+        <p>Whether you're a front-end or back-end developer, these VS Code extensions will boost your productivity and workflow...</p>
+      </article>
+    </main>
+
+    <!-- Sidebar -->
+    <aside style="flex: 1;">
+      <section>
+        <h3>👤 About Me</h3>
+        <p>Hi, I'm Rajeev Singh — a full-stack developer, cloud architect, and lifelong learner. I write about code, cloud, and personal growth.</p>
+      </section>
+
+      <section>
+        <h3>📂 Categories</h3>
+        <ul>
+          <li>DevOps</li>
+          <li>Cloud Computing</li>
+          <li>Web Development</li>
+          <li>Programming Tips</li>
+          <li>Career & Motivation</li>
+        </ul>
+      </section>
+
+      <section>
+        <h3>📌 Popular Posts</h3>
+        <ul>
+          <li>Build a CI/CD Pipeline in 1 Hour</li>
+          <li>Why I Switched from Azure to AWS</li>
+          <li>Top 5 Tools Every Developer Should Use</li>
+        </ul>
+      </section>
+    </aside>
+  </div>
+
+  <!-- Footer -->
+  <footer style="margin-top: 50px;">
+    <hr>
+    <p>&copy; 2025 Rajeev Singh. All rights reserved.</p>
+    <p>
+      <a href="#">LinkedIn</a> |
+      <a href="#">GitHub</a> |
+      <a href="#">Twitter</a>
+    </p>
+  </footer>
+
+</body>
+</html>
